test/should-fail/vsgc1868.visage
/**
 * Should-fail test VSGC-1868 : Non-runnable scripts shouldn't be runnable (shouldn't have run, visage$run$ or main)
 *
 * @test
 * @run/fail
 */

public class Foo {
  // Whatever
}

var x = Foo{};
